@@ -1,3 +1,9 @@
+2006-04-07  Adam Jackson  <ajax@freedesktop.org>
+
+	* hw/xfree86/common/xisb.c:
+	* hw/xfree86/common/xisb.h:
+	Remove libc wrapper types from Xisb interfaces.
+
 2006-04-07  Daniel Stone  <daniel@freedesktop.org>
 
 	* hw/xfree86/utils/xorgcfg/keyboard-cfg.c:
